[UPDATE] Update Admin

--- a/.gitignore
+++ b/.gitignore
@@ -827,4 +827,6 @@ FodyWeavers.xsd
 
 mysqldata
 
+.vscode
+
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,linux,visualstudio,visualstudiocode,intellij+all,eclipse,sublimetext,git,node,dotenv
