--- a/.gitignore
+++ b/.gitignore
@@ -829,4 +829,6 @@ mysqldata
 
 .vscode
 
+deploy.json
+
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,linux,visualstudio,visualstudiocode,intellij+all,eclipse,sublimetext,git,node,dotenv
