--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,11 @@ services:
         ports:
             - '3307:3306'
         restart: always
+        volumes:
+            - ./mysqldata/conf.d:/etc/mysql/conf.d
+            - ./mysqldata/data:/var/lib/mysql
+            - ./mysqldata/initdb.d:/docker-entrypoint-initdb.d
         environment:
             - MYSQL_ROOT_PASSWORD=root
+            - TZ=Asia/Seoul
         image: mariadb
