--- a/.github/workflows/prod.deploy.yaml
+++ b/.github/workflows/prod.deploy.yaml
@@ -18,6 +18,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Source Update
+        run: git pull
+
       - name: Use Node.js ${{ matrix.node-version}}
         uses: actions/setup-node@v1
         with:
