--- a/.github/workflows/dev.deploy.yaml
+++ b/.github/workflows/dev.deploy.yaml
@@ -9,7 +9,7 @@ on:
 
 defaults:
   run:
-    working-directory: ${{ secrets.WORKING_DIRECTORY }}
+    working-directory: ~/Tracer-Backend
 
 jobs:
   deploy:
