--- a/.github/workflows/dev.deploy.yaml
+++ b/.github/workflows/dev.deploy.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: [self-hosted, Linux, X64, islab-tracer]
+    runs-on: [self-hosted, Linux, X64, chunsik]
 
     steps:
       - name: SSH and deploy node app
