--- a/.github/workflows/prod.deploy.yaml
+++ b/.github/workflows/prod.deploy.yaml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: ISLab Blockchain - IslabTracer
+name: ISLab Blockchain - ISLabTracer - Production
 
 on:
   push:
@@ -9,25 +9,19 @@ on:
 
 jobs:
   deploy:
-    runs-on: [self-hosted, linux, x64, islab-tracer]
-
-    strategy:
-      matrix:
-        node-version: [18.x]
+    runs-on: [self-hosted, Linux, X64, chunsik]
 
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Source Update
-        run: git pull
-
-      - name: Use Node.js ${{ matrix.node-version}}
-        uses: actions/setup-node@v1
+      - name: SSH and deploy node app
+        uses: appleboy/ssh-action@master
         with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Module Install - npm install
-        run: npm install
-
-      - name: Build - npm build
-        run: npm run build
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: ${{ secrets.SSH_PORT }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
+          script: |
+            cd ~/Tracer-Backend
+            git pull origin develop
+            pm2 delete all
+            npm run deploy
