--- a/.github/workflows/prod.deploy.yaml
+++ b/.github/workflows/prod.deploy.yaml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: ISLab Blockchain - ISLabTracer - Production
+name: ISLab Blockchain - ISLabTracer Backend - Production
 
 on:
   push:
@@ -23,5 +23,6 @@ jobs:
           script: |
             cd ~/Tracer-Backend
             git pull origin develop
+            npm ci
             pm2 delete all
             npm run deploy
